unpackaged/main/default/objects/FSL__Scheduling_Policy__c/FSL__Scheduling_Policy__c.object-meta.xml
<CustomObject>
    <label>Scheduling Policy</label>
    <nameField>
        <label>Scheduling Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduling Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>