unpackaged/main/default/objects/FSL__Scheduling_Policy__c/fields/FSL__Fix_Overlaps__c.field-meta.xml
<CustomField>
    <fullName>FSL__Fix_Overlaps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fix Overlaps</label>
    <type>Checkbox</type>
</CustomField>