unpackaged/main/default/objects/FSL__Scheduling_Policy__c/fields/FSL__Service_Priority_Weight__c.field-meta.xml
<CustomField>
    <fullName>FSL__Service_Priority_Weight__c</fullName>
    <label>Service Priority Weight (Closed Pilot)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>