unpackaged/main/default/objects/FSL__Scheduling_Policy__c/validationRules/FSL__Deny_Objectives_Negative_Weight.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Deny_Objectives_Negative_Weight</fullName>
    <active>true</active>
    <errorConditionFormula>OR(FSL__Service_Clustering_Weight__c &lt; 0,FSL__Service_Priority_Weight__c &lt; 0)</errorConditionFormula>
    <errorMessage>Policy objectives weight can not be negative</errorMessage>
</ValidationRule>