unpackaged/main/default/objects/FSL__Scheduling_Policy__c/listViews/FSL__All.listView-meta.xml
<ListView>
    <fullName>FSL__All</fullName>
    <columns>NAME</columns>
    <columns>FSL__Description__c</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>